# telellm

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
deployment/: bot-deployment.yaml  configmap.yaml  consumer-deployment.yaml  ingress.yaml  model-update-cron.yaml  ollama-deployment.yaml  ollama-init-job.yaml  redis-deployment.yaml  secret.yaml
telellm/: bot.py  consumer.py  logger.py  main.py
telellm/lib/bot/: __init__.py  auth.py  bot.py  callback.py  commands.py  config.py  keyboard.py  message.py  ollama.py  thread.py
telellm/lib/bot/history/: in_memory.py
telellm/lib/config/: config.py
telellm/lib/logger/: __init__.py
telellm/lib/ollama/: __init__.py  ollama.py
telellm/lib/redis/: __init__.py  queue.py  redis.py
tests/: hello_test.py
